Fix(web): Prevent SVG inside `PartnerLogo` from overflowing #DS-1560

--- a/packages/web/src/scss/components/PartnerLogo/_PartnerLogo.scss
+++ b/packages/web/src/scss/components/PartnerLogo/_PartnerLogo.scss
@@ -14,7 +14,8 @@
 
 .PartnerLogo > img,
 .PartnerLogo > svg {
-    width: fit-content;
+    width: auto;
+    max-width: 100%;
     height: var(--#{tokens.$css-variable-prefix}partner-logo-image-height);
 }
 
